Interface inicial para salvar e buscar livros